<resources>
    <string name="app_name">MovieBox</string>

    <string name="header">SELECT A MOVIE TO ENJOY</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_vote_average">Average Vote</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_plot_synopsis">Plot Synopsis</string>
    <string name="movie_id">Movie Id</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_movie_color">#228B22</string>
    <string name="movie_favorite">Add Favorite</string>
    <string name="movie_play_trailer">Trailers</string>
    <string name="movie_reviews">Reviews</string>
    <string name="movie_no_review">No Reviews available</string>
    <string name="no_movie_trailer">No Movie Trailer available</string>


    <string name="no_internet_connection">No Internet Connection.</string>

    <!-- Error messages-->
    <string name="detail_error_message">Movie data not available</string>

    <!-- strings used for the preference setting-->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Sort By</string>
    <string name="settings_order_by_key" translatable="false">sort_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>

    <!-- Label for order-by most popular movies option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>

    <!-- Label for order-by most top rated option [CHAR LIMIT=20] -->
    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>

    <!-- Label for order-by favorite movies [CHAR LIMIT=20] -->
    <string name="settings_order_by_favorite_label" translatable="false">Favorite Movies</string>
    <string name="settings_order_by_favorite_value" translatable="false">favorite</string>


    <!-- Strings used while adding a movie as favorite   -->
    <!-- Toast message in editor when current movie was successfully added as favorite [CHAR LIMIT=NONE] -->
    <string name="add_movie_favorite_successful">Movie added as favorite.</string>

    <!-- Toast message in editor when current  movie was failed to be added as favorite[CHAR LIMIT=NONE] -->
    <string name="add_movie_favorite_failed">Error while adding movie as favorite..</string>


    <string name="ummarked_as_favorite_failed">Error while unmarking movie as favorite..</string>
    <string name="ummarked_as_favorite_successful"> Unmarked movie as favorite successfully..</string>


</resources>
