<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.android.moviebox.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/moviePosterValue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/details_image_width"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/movieTitleValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/movie_title"
                    android:textColor="@color/selectTextColor"
                    android:textSize="@dimen/details_textsize"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/movieReleaseDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/movie_release_date"
                    android:textColor="@color/selectTextColor"
                    android:textSize="@dimen/details_textsize"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>


                <TextView
                    android:id="@+id/movieVoteAverageValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/movie_vote_average"
                    android:textColor="@color/selectTextColor"
                    android:textSize="@dimen/details_textsize"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

                <Button
                    android:id="@+id/movieFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_favorite"
                    android:background="@color/favoriteColor"
                    android:padding="@dimen/button_padding"/>

            </LinearLayout>
        </LinearLayout>
            <TextView
                android:id="@+id/moviePlotSynopsisValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movie_plot_synopsis"
                android:textColor="@color/selectTextColor"
                android:textSize="@dimen/details_textsize"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/movieTrailerHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_play_trailer"
                android:textColor="@color/selectTextColor"
                android:textSize="@dimen/details_textsize"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:id="@+id/add_trailers_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/no_movie_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selectTextColor"
                    android:textSize="@dimen/details_textsize"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/movieReviewHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_reviews"
            android:textColor="@color/selectTextColor"
            android:textSize="@dimen/details_textsize"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/movieReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_reviews"
            android:textColor="@color/selectTextColor"
            android:textSize="@dimen/details_textsize"
            android:paddingBottom="@dimen/activity_vertical_margin"/>


    </LinearLayout>



</ScrollView>